bhyve amd64: allow iommu to fail attaching device to host domain

If iommu does not want to handle some device, e.g. because the ACPI
table does not list it as translated, this is not a reason to fail
creating the host domain.

PR:	285976
Sponsored by:	The FreeBSD Foundation